hp and attack values attach when player and enemy selected

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <div id="attack-box">
                     <h2>Fight!</h2>
                     <button id="attack-btn">Attack!</button>
+                    <div id="attack-txt"></div>
                 </div>
 
                 <div id="defender-box">
