changed the script to make clones of enemies and game is fully functionalgit statusgit status

--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
             <div class="fluid fighter-card player" id="player-0" value="12">
                 <h3 class="fighter-name">Finn & Jake!</h2>
                     <img src="assets/images/sm-fighter-0.png" class="img-fluid" id="player-img-0">
-                    <div id="player-hp-0" value="100">100</div>
+                    <div id="player-hp-0" value="100">100 HP</div>
             </div>
 
             <div class="fluid fighter-card player" id="player-1" value="8">
                 <h3 class="fighter-name">Ice King!</h2>
                     <img src="assets/images/sm-fighter-1.png" class="img-fluid" id="fighter-img-1">
-                    <div id="player-hp-1" value="120">120</div>
+                    <div id="player-hp-1" value="120">120 HP</div>
             </div>
 
             <div class="fluid fighter-card player" id="player-2" value="7">
                 <h3 class="fighter-name">Marceline!</h2>
                     <img src="assets/images/sm-fighter-2.png" class="img-fluid" id="fighter-img-2">
-                    <div id="player-hp-2" value="160">160</div>
+                    <div id="player-hp-2" value="160">140 HP</div>
             </div>
 
             <div class="fluid fighter-card player" id="player-3" value="9">
                 <h3 class="fighter-name">Flame Princess!</h2>
                     <img src="assets/images/sm-fighter-3.png" class="img-fluid" id="fighter-img-3">
-                    <div id="player-hp-3" value="180">180</div>
+                    <div id="player-hp-3" value="180">160 HP</div>
             </div>
 
         </div>
@@ -83,19 +83,19 @@
             <div class="fluid fighter-card enemy" id="enemy-0" value="12">
                 <h3 class="fighter-name">Finn & Jake!</h2>
                     <img src="assets/images/sm-fighter-0.png" class="img-fluid" id="fighter-img-0">
-                    <div id="enemy-hp-0" value="100">100</div>
+                    <div value="100">100 HP</div>
             </div>
 
             <div class="fluid fighter-card enemy" id="enemy-1" value="8">
                 <h3 class="fighter-name">Ice King!</h2>
                     <img src="assets/images/sm-fighter-1.png" class="img-fluid" id="fighter-img-1">
-                    <div id="enemy-hp-1" value="120">120</div>
+                    <div id="enemy-hp-1" value="120">120 HP</div>
             </div>
 
             <div class="fluid fighter-card enemy" id="enemy-2" value="7">
                 <h3 class="fighter-name">Marceline!</h2>
                     <img src="assets/images/sm-fighter-2.png" class="img-fluid" id="fighter-img-2">
-                    <div id="enemy-hp-2" value="140">140</div>
+                    <div id="enemy-hp-2" value="140">140 HP</div>
             </div>
 
             <div class="fluid fighter-card enemy" id="enemy-3" value="9">
@@ -108,7 +108,7 @@
         <button id="play-again">Play Again?</button>
     </div>
 </div>
-
+<div class="row" id="enemies-defeated-row"></div>
 
 
     </div>
